[gd_scene load_steps=4 format=3 uid="uid://cwo7wghvue1md"]

[ext_resource type="Script" path="res://scripts/screens/task_complete_popup.gd" id="1_86ynm"]

[sub_resource type="Gradient" id="Gradient_avxqa"]
offsets = PackedFloat32Array(0, 0.718232, 1)
colors = PackedColorArray(1, 0.760784, 0, 1, 1, 0.491149, 0, 1, 1, 0.247059, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_i757g"]
gradient = SubResource("Gradient_avxqa")
width = 69

[node name="TaskCompletePopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86ynm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 113.0
offset_top = 16.0
offset_right = 198.0
offset_bottom = 380.0
grow_horizontal = 2
rotation = 1.57079
pivot_offset = Vector2(34, 35)
texture = SubResource("GradientTexture1D_i757g")

[node name="TaskComplete" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Heading" type="Label" parent="TaskComplete"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.5
offset_top = 24.0
offset_right = 145.5
offset_bottom = 61.0
grow_horizontal = 2
theme_type_variation = &"HeaderMedium"
text = "üèÖ Task Complete"
horizontal_alignment = 1

[node name="Description" type="Label" parent="TaskComplete"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.5
offset_top = 56.0
offset_right = 145.5
offset_bottom = 93.0
grow_horizontal = 2
theme_type_variation = &"HeaderSmall"
text = "Collect 500 coins"
horizontal_alignment = 1

[node name="PopupTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="PopupTimer" to="." method="_on_popup_timer_timeout"]
